fixed {text-align} attribute value from 'end' to 'center'

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Open Sans", sans-serif;
-  text-align: end;
+  text-align: center;
   margin: 0;
 }
 
